####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = addphoto.png hi16-action-exphtml.png info.png hi16-action-smallcal.png sort_decrease.png sort_incr.png photoedit.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kalbum/icons/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/addphoto.png $(kde_datadir)/kalbum/icons/hicolor/32x32/actions/addphoto.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-exphtml.png $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/exphtml.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/icons/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/info.png $(kde_datadir)/kalbum/icons/hicolor/32x32/actions/info.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-smallcal.png $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/smallcal.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/sort_decrease.png $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/sort_decrease.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/sort_incr.png $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/sort_incr.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/icons/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/photoedit.png $(kde_datadir)/kalbum/icons/hicolor/32x32/actions/photoedit.png

uninstall-local:
	-rm -f $(kde_datadir)/kalbum/icons/hicolor/32x32/actions/addphoto.png
	-rm -f $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/exphtml.png
	-rm -f $(kde_datadir)/kalbum/icons/hicolor/32x32/actions/info.png
	-rm -f $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/smallcal.png
	-rm -f $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/sort_decrease.png
	-rm -f $(kde_datadir)/kalbum/icons/hicolor/16x16/actions/sort_incr.png
	-rm -f $(kde_datadir)/kalbum/icons/hicolor/32x32/actions/photoedit.png

####### kdevelop will overwrite this part!!! (end)############
