####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = bg.png blank.png f_bot.png f_b.png f_lb.png f_left.png f_l.png f_lt.png f_rb.png f_r.png f_rt.png f_top.png f_t.png slide01.png t_ou_d.png t_ou_u.png t_pr_d.png t_pr_u.png t_wh_d.png t_wh_u.png npage.png npage_ro.png ppage.png ppage_ro.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/bg.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/bg.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/blank.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/blank.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_bot.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_bot.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_b.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_b.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_lb.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_lb.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_left.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_left.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_l.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_l.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_lt.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_lt.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_rb.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_rb.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_r.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_r.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_rt.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_rt.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_top.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_top.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/f_t.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_t.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/slide01.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/slide01.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/t_ou_d.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_ou_d.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/t_ou_u.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_ou_u.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/t_pr_d.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_pr_d.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/t_pr_u.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_pr_u.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/t_wh_d.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_wh_d.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/t_wh_u.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_wh_u.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/npage.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/npage.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/npage_ro.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/npage_ro.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/ppage.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/ppage.png
	$(mkinstalldirs) $(kde_datadir)/kalbum/data/kalbum_html/folder/images/
	$(INSTALL_DATA) $(srcdir)/ppage_ro.png $(kde_datadir)/kalbum/data/kalbum_html/folder/images/ppage_ro.png

uninstall-local:
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/bg.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/blank.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_bot.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_b.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_lb.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_left.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_l.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_lt.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_rb.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_r.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_rt.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_top.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/f_t.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/slide01.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_ou_d.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_ou_u.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_pr_d.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_pr_u.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_wh_d.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/t_wh_u.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/npage.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/npage_ro.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/ppage.png
	-rm -f $(kde_datadir)/kalbum/data/kalbum_html/folder/images/ppage_ro.png

####### kdevelop will overwrite this part!!! (end)############
